2008-11-10  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Fix make dist.

2008-11-09  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Bump to b39.
	* patches/icedtea-hotspot-use-idx_t.patch,
	* patches/icedtea-security-updates.patch:
	Remove parts applied/changed in b39.
	
2008-11-07  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-jsoundhs.patch: Added two more diffs to remove all uses 
	of jsoundhs and Headspace libraries.

2008-11-07  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Use 'node|short' instead of 'rev'
	for Mercurial revision number.

2008-11-07  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Remove unneeded citypeflow fix,
	move zero patching to the end.
	* patches/icedtea-bytecodeInterpreter.patch,
	* patches/icedtea-hotspot7-build-fixes.patch:
	Regenerated.
	* ports/hotspot/src/cpu/zero/vm/assembler_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/disassembler_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/disassembler_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/frame_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/relocInfo_zero.cpp:
	Updated for HotSpot 14 b05.

2008-10-30  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add bootstrap-directory-symlink
	target to icedtea-ecj so it works as the user-specified
	make target.

2008-10-29  Andrew John Hughes  <ahughes@redhat.com>

	Merge from IcedTea6 1.3.1.
	* ChangeLog,
	* HACKING,
	* IcedTeaPlugin.cc,
	* Makefile.am,
	* NEWS,
	* gcjwebplugin.cc,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/Launcher.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/NetxPanel.java,
	* patches/icedtea-fonts.patch,
	* patches/icedtea-renderer-crossing.patch,
	* patches/icedtea-uname.patch,
	* plugin/icedtea/netscape/javascript/JSObject.java,
	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java,
	* plugin/icedtea/sun/applet/PluginAppletViewer.java,
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp,